commit after session 2

--- a/src/app/admin-insert-job-offer/admin-insert-job-offer.component.html
+++ b/src/app/admin-insert-job-offer/admin-insert-job-offer.component.html
@@ -20,3 +20,6 @@
   <br />
   <button md-button (click)="submitForm()">Submit</button>
 </form>
+
+<hr><br />
+<app-admin-list-job-offers></app-admin-list-job-offers>
