--- a/src/app/insert-types/value-insert/value-insert.component.html
+++ b/src/app/insert-types/value-insert/value-insert.component.html
@@ -1,15 +1,15 @@
-<md-card-content>
+<mat-card-content>
 
-  <md-input-container>
+  <mat-input-container>
     <div *ngIf="insertService.joFields[i].answerDatatype == insertService.variables.getNumericDatatypeURI(); then numericBlock else stringBlock"></div>
     <ng-template #numericBlock>
-    <input mdInput placeholder="Insert your number here" value="" [(ngModel)]="answerValue" (keyup)="handleOperationsSingleSelect(answerValue)" type="number" required >
+    <input matInput placeholder="Insert your number here" value="" [(ngModel)]="answerValue" (keyup)="handleOperationsSingleSelect(answerValue)" type="number" required >
     </ng-template>
     <ng-template #stringBlock>
-      <input mdInput placeholder="Insert your value here" value="" [(ngModel)]="answerValue" (keyup)="handleOperationsSingleSelect(answerValue)" required >
+      <input matInput placeholder="Insert your value here" value="" [(ngModel)]="answerValue" (keyup)="handleOperationsSingleSelect(answerValue)" required >
     </ng-template>
 
-  </md-input-container>
+  </mat-input-container>
 
   <!--<p>Please select the comparison<br>operation of your entered value.</p>
   <p><md-radio-group class="radio-group">
@@ -22,4 +22,4 @@
     </div>
   </md-radio-group>
   </p><!-->
-</md-card-content>
+</mat-card-content>
